force-app/main/default/objects/Account/fields/Daku__c.field-meta.xml
<CustomField>
    <fullName>Daku__c</fullName>
    <label>Daku</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>