force-app/main/default/objects/Account/fields/KAJL__c.field-meta.xml
<CustomField>
    <fullName>KAJL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KAJL</label>
    <type>Checkbox</type>
</CustomField>