force-app/main/default/objects/Account/fields/kiljbj__c.field-meta.xml
<CustomField>
    <fullName>kiljbj__c</fullName>
    <defaultValue>false</defaultValue>
    <label>kiljbj</label>
    <type>Checkbox</type>
</CustomField>