force-app/main/default/objects/Account/fields/KKA__c.field-meta.xml
<CustomField>
    <fullName>KKA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KKA</label>
    <type>Checkbox</type>
</CustomField>