force-app/main/default/objects/Account/fields/LALA__c.field-meta.xml
<CustomField>
    <fullName>LALA__c</fullName>
    <label>LALA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>