force-app/main/default/objects/Account/fields/LIOS__c.field-meta.xml
<CustomField>
    <fullName>LIOS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LIOS</label>
    <type>Checkbox</type>
</CustomField>