force-app/main/default/objects/Account/fields/Nety__c.field-meta.xml
<CustomField>
    <fullName>Nety__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nety</label>
    <type>Checkbox</type>
</CustomField>