force-app/main/default/objects/Account/fields/puli__c.field-meta.xml
<CustomField>
    <fullName>puli__c</fullName>
    <defaultValue>false</defaultValue>
    <label>puli</label>
    <type>Checkbox</type>
</CustomField>