force-app/main/default/objects/Account/fields/QDEV1_NEW__c.field-meta.xml
<CustomField>
    <fullName>QDEV1_NEW__c</fullName>
    <label>QDEV1_NEW</label>
    <length>100</length>
    <type>Text</type>
</CustomField>