force-app/main/default/objects/Account/fields/YAYA__c.field-meta.xml
<CustomField>
    <fullName>YAYA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>YAYA</label>
    <type>Checkbox</type>
</CustomField>